fixed line spacing/added & into SCSS files

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -10,96 +10,97 @@
   border-radius: 5px;
   border: 1px solid #f3f3f3;
   background: #fff;
-}
 
-.card__image {
-  width: 160px;
-  height: 134px;
-  align-self: center;
-}
+  &__image {
+    width: 160px;
+    height: 134px;
+    align-self: center;
 
-.card__image--position {
-  margin-top: 16px;
-}
+    &--position {
+      margin-top: 16px;
+    }
+  }
 
-.card__name {
-  font-weight: 500;
-}
+  &__name {
+    font-weight: 500;
 
-.card__name--position {
-  margin-top: 40px;
-}
+    &--position {
+      margin-top: 40px;
+    }
+  }
 
-.card__code {
-  font-size: 10px;
-  line-height: 14px;
-  color: var(--secondary);
-}
+  &__code {
+    font-size: 10px;
+    line-height: 14px;
+    color: var(--secondary);
 
-.card__code--position {
-  margin-top: 4px;
-}
+    &--position {
+      margin-top: 4px;
+    }
+  }
 
-.card__rating {
-  display: flex;
-  justify-content: space-between;
-}
+  &__rating {
+    display: flex;
+    justify-content: space-between;
 
-.card__rating--position {
-  margin-top: 16px;
-}
+    &--position {
+      margin-top: 16px;
+    }
+  }
 
-.card__revievs {
-  font-size: 10px;
-  line-height: 14px;
-}
+  &__revievs {
+    font-size: 10px;
+    line-height: 14px;
+  }
 
-.card__cost {
-  display: flex;
-  justify-content: space-between;
-}
+  &__cost {
+    display: flex;
+    justify-content: space-between;
 
-.card__cost--position {
-  margin-top: 24px;
-}
+    &--position {
+      margin-top: 24px;
+    }
+  }
 
-.card__price {
-  color: var(--secondary);
-}
+  &__price {
+    color: var(--secondary);
+  }
 
-.card__money {
-  font-size: 16px;
-  font-weight: 700;
-}
+  &__money {
+    font-size: 16px;
+    font-weight: 700;
+  }
 
-.card__link {
-  box-sizing: border-box;
-  display: block;
-  width: 166px;
-  height: 40px;
-  flex-shrink: 0;
-  padding: 12px 70px;
+  &__link {
+    box-sizing: border-box;
+    display: block;
+    width: 166px;
+    height: 40px;
+    flex-shrink: 0;
+    padding: 12px 70px;
 
-  color: var(--white);
-  text-align: center;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 16px;
-  text-transform: uppercase;
-  text-decoration: none;
+    color: var(--white);
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-decoration: none;
 
-  border-radius: 5px;
-  background: var(--Blue-accent);
-  border: 1px none var(--Blue-accent);
-}
+    border-radius: 5px;
+    background: var(--Blue-accent);
+    border: 1px none var(--Blue-accent);
 
-.card__link:hover {
-  background: none;
-  border-style: solid;
+    &:hover {
+      background: none;
+      border-style: solid;
 
-  color: var(--Blue-accent);
-}
+      color: var(--Blue-accent);
+    }
 
-.card__link--position {
-  margin-top: 16px;
+    &--position {
+      margin-top: 16px;
+    }
+
+  }
 }
